--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,4 +1,19 @@
 .main-style {
   padding: 32px 12px;
   border-top: 1px solid #ddd;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.right-items {
+  display: flex;
+  gap: 16px;
+  margin: 0 32px;
+}
+
+.logo-button {
+  width: 25px;
+  height: 25px;
 }
