--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,7 @@
 .main-style {
   padding: 32px 12px;
   border-top: 1px solid #ddd;
+  margin-top: 100px;
 
   display: flex;
   justify-content: space-between;
